--- a/src/global.scss
+++ b/src/global.scss
@@ -9,18 +9,41 @@
  * https://ionicframework.com/docs/layout/global-stylesheets
  */
 
+
 /* Core CSS required for Ionic components to work properly */
+
 @import '~@ionic/angular/css/core.css';
 
 /* Basic CSS for apps built with Ionic */
+
 @import '~@ionic/angular/css/normalize.css';
 @import '~@ionic/angular/css/structure.css';
 @import '~@ionic/angular/css/typography.css';
 @import '~@ionic/angular/css/display.css';
 
 /* Optional CSS utils that can be commented out */
+
 @import '~@ionic/angular/css/padding.css';
 @import '~@ionic/angular/css/float-elements.css';
 @import '~@ionic/angular/css/text-alignment.css';
 @import '~@ionic/angular/css/text-transformation.css';
 @import '~@ionic/angular/css/flex-utils.css';
+.h-100 {
+    height: 100%;
+}
+
+.h-30 {
+    height: 30%;
+}
+
+ion-input.default-theme {
+    border: 1px solid #d7dde0;
+    border-radius: 5px;
+    margin-top: 16px;
+    .native-input {
+        padding-left: 16px;
+    }
+    .native-input::placeholder {
+        color: #d7dde0;
+    }
+}
