--- a/src/app/pages/login/login-form/login-form.component.html
+++ b/src/app/pages/login/login-form/login-form.component.html
@@ -1,8 +1,7 @@
 <ion-header class="ion-no-border">
     <ion-toolbar>
-        <ion-buttons slot="start">
-            <ion-back-button defaultHref="/login">
-            </ion-back-button>
+        <ion-buttons slot="start" mode="md">
+            <ion-back-button defaultHref="/login"> </ion-back-button>
             <ion-title>Login</ion-title>
         </ion-buttons>
     </ion-toolbar>
@@ -13,29 +12,30 @@
         <ion-row>
             <ion-col size="12" class="ion-no-padding">
                 <form (ngSubmit)="login()" #loginForm="ngForm">
-
                     <ion-item lines="none">
                         <ion-label position="stacked">Email</ion-label>
-                        <ion-input class="default-theme" required placeholder="Your E-mail Address"></ion-input>
+                        <ion-input class="default-theme" required placeholder="{{ 'YOUR_EMAIL_ADDRESS' | translate }}"></ion-input>
                     </ion-item>
                     <ion-item lines="none" class="padding-form">
                         <ion-label position="stacked">Password</ion-label>
-                        <ion-input class="default-theme" required placeholder="Your Password"></ion-input>
+                        <ion-input class="default-theme" required placeholder="{{ 'YOUR_PASSWORD' | translate }}"></ion-input>
                     </ion-item>
                 </form>
             </ion-col>
         </ion-row>
         <ion-row class="ion-padding">
             <ion-col class="padding-forgot-pass">
-                <ion-text class="login-redirect-text ion-padding-top">Forgot Password</ion-text>
+                <ion-text class="login-redirect-text ion-padding-top" [routerLink]="['/change-password']">{{ 'FORGOT_PASSWORD' | translate }}
+                </ion-text>
             </ion-col>
             <ion-col class="ion-text-right">
-                <ion-text class="login-redirect-text">New Here? Register Now</ion-text>
+                <ion-text class="login-redirect-text">
+                    {{ 'NEW_HERE' | translate }}? <a class="link" href="#">{{ 'REGISTER_NOW' | translate }}</a>
+                </ion-text>
             </ion-col>
         </ion-row>
     </ion-grid>
-    <ion-grid>
-    </ion-grid>
+    <ion-grid> </ion-grid>
 </ion-content>
 <ion-footer class="ion-no-border">
     <ion-row class="ion-padding-bottom">
