--- a/src/app/pages/login/login-form/login-form.component.scss
+++ b/src/app/pages/login/login-form/login-form.component.scss
@@ -9,4 +9,11 @@
 .login-redirect-text {
     font-size: 12px;
     font-weight: bold;
+    &:focus {
+        outline: 0;
+    }
+    .link {
+        color: black;
+        text-decoration: none;
+    }
 }
