--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -34,7 +34,7 @@
             </ion-col>
             <ion-col size="12" class="ion-text-center">
                 <ion-text class="login-redirect-text">
-                    New Here? Register Now
+                    {{'NEW_HERE' | translate}}? <a class="link" href="#">{{'REGISTER_NOW' | translate}}</a>
                 </ion-text>
             </ion-col>
         </ion-row>
