--- a/src/app/pages/login/login.page.scss
+++ b/src/app/pages/login/login.page.scss
@@ -1,4 +1,11 @@
 .login-redirect-text {
     font-size: 12px;
     font-weight: bold;
+    &:focus {
+        outline: 0;
+    }
+    .link {
+        color: black;
+        text-decoration: none;
+    }
 }
