--- a/src/global.scss
+++ b/src/global.scss
@@ -9,7 +9,6 @@
  * https://ionicframework.com/docs/layout/global-stylesheets
  */
 
-
 /* Core CSS required for Ionic components to work properly */
 
 @import '~@ionic/angular/css/core.css';
@@ -29,21 +28,28 @@
 @import '~@ionic/angular/css/text-transformation.css';
 @import '~@ionic/angular/css/flex-utils.css';
 .h-100 {
-    height: 100%;
+  height: 100%;
 }
 
 .h-30 {
-    height: 30%;
+  height: 30%;
 }
 
 ion-input.default-theme {
-    border: 1px solid #d7dde0;
-    border-radius: 5px;
-    margin-top: 16px;
-    .native-input {
-        padding-left: 16px;
-    }
-    .native-input::placeholder {
-        color: #d7dde0;
-    }
+  border: 1px solid #d7dde0;
+  border-radius: 5px;
+  margin-top: 16px;
+  .native-input {
+    padding-left: 16px;
+  }
+  .native-input::placeholder {
+    color: #d7dde0;
+  }
+}
+
+.stepper {
+  border-bottom: 3px solid black;
+  &-inactive {
+    filter: opacity(0.5) !important;
+  }
 }
