implement set password ui & modal information

--- a/src/app/pages/login/login-form/login-form.component.html
+++ b/src/app/pages/login/login-form/login-form.component.html
@@ -41,7 +41,7 @@
 <ion-footer class="ion-no-border">
   <ion-row class="ion-padding-bottom">
     <ion-col class="ion-padding">
-      <ion-button expand="full" (click)="loginForm.ngSubmit.emit()"> Login</ion-button>
+      <ion-button expand="full" (click)="loginForm.ngSubmit.emit()"> {{ 'LOGIN' | translate }}</ion-button>
     </ion-col>
   </ion-row>
 </ion-footer>
