--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -1,97 +1,26 @@
-#container {
-  text-align: center;
-
-  // position: absolute;
-  // left: 0;
-  // right: 0;
-  // top: 50%;
-  // transform: translateY(-50%);
-}
-
-#container strong {
-  font-size: 20px;
-  line-height: 26px;
-}
-
-#container p {
-  font-size: 16px;
-  line-height: 22px;
-
-  color: #8c8c8c;
-
-  margin: 0;
-}
-
-#container a {
-  text-decoration: none;
-}
-
-ion-content ion-toolbar {
-  --background: translucent;
-}
-
-.content {
-  padding-top: 25px !important;
-}
-
-.card {
-  padding: 10px;
-  border-radius: 7px;
-  box-shadow: 1px 2px 6px 1px rgba(0, 43, 96, 0.16);
-  background-color: #ffffff;
-
-  img {
-    height: 35px;
-  }
-
-  .feature_title {
-    margin: 15px 0px 7px 0px;
-  }
-}
-
-.lang {
-  ion-col {
-    margin-right: 15px;
-    margin-top: 15px;
-    padding: 0px;
-  }
-}
-
-ion-card ion-card-content ion-text {
-  font-size: 17px;
-}
-
-ion-card{
-  border-radius: 7px;;
-}
-
-.horizontal-banner {
-  border-radius: 7px;
-}
-
-.margin {
-  &-t10 {
-    margin-top: 10px;
-  }
-  &-t60 {
-    margin-top: 60px;
-  }
-  &-b10 {
-    margin-bottom: 10px;
-  }
-  &-b20 {
-    margin-bottom: 20px;
-  }
-  &-l10 {
-    margin-left: 10px;
-  }
-  &-r10 {
-    margin-right: 10px;
-  }
-}
-
-
-
 img {
   border-radius: 7px;
+}
+
+.ion-text-wrap {
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.location-title {
+  font-size: 13px;
+}
+
+.location-text {
+  font-weight: bold;
+  font-size: 12px;
+}
+
+.notif-icon {
+  font-size: 25px;
+}
+
+.divider {
+  height: 10px;
+  background-color: lightgray;
 }
