implement ui product list

--- a/src/app/shared/common/cards/card-product/card-product.component.html
+++ b/src/app/shared/common/cards/card-product/card-product.component.html
@@ -15,7 +15,7 @@
       <ion-col size="12">
         <p class="product-size">250gr/pcs</p>
         <p class="product-price">Rp 25.000</p>
-        <p class="product-final-price">Rp 20.000</p>
+        <p class="product-final-price">Rp 20.000 <span> /pcs</span></p>
       </ion-col>
     </ion-row>
   </ion-card-content>
