--- a/src/app/pages/home/home-categories/home-categories.component.html
+++ b/src/app/pages/home/home-categories/home-categories.component.html
@@ -1,6 +1,5 @@
-<ion-row>
-  <ion-col size="3" class="ion-text-center ion-padding-vertical" *ngFor="let item of [1, 2, 3, 4, 5, 6, 7, 8]">
-    <img src="https://via.placeholder.com/50.png" class="rounded" />
-    <ion-text class="category-name">Category</ion-text>
+<ion-row class="ion-no-padding">
+  <ion-col class="ion-no-padding" size="3" *ngFor="let item of [1, 2, 3, 4, 5, 6, 7, 8]">
+    <app-card-category></app-card-category>
   </ion-col>
 </ion-row>
