--- a/src/app/pages/notification/notification.page.html
+++ b/src/app/pages/notification/notification.page.html
@@ -1,6 +1,6 @@
 <ion-header [translucent]="true" class="ion-no-border">
   <ion-toolbar>
-    <ion-title> Notification </ion-title>
+    <ion-title> {{'NOTIFICATION' | translate}} </ion-title>
   </ion-toolbar>
 </ion-header>
 
