i18n for profile page

--- a/src/app/pages/profile/profile.page.html
+++ b/src/app/pages/profile/profile.page.html
@@ -1,6 +1,6 @@
 <ion-header [translucent]="true" class="ion-no-border">
   <ion-toolbar mode="md">
-    <ion-title class="ion-padding-horizontal">My Profile</ion-title>
+    <ion-title class="ion-padding-horizontal">{{'MY_PROFILE' | translate}}</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -21,7 +21,7 @@
         </ion-row>
       </ion-col>
       <ion-col size="3">
-        <ion-button expand="block" fill="outline"> View QR </ion-button>
+        <ion-button expand="block" fill="outline"> {{'VIEW_QR' | translate}} </ion-button>
       </ion-col>
     </ion-row>
 
