--- a/src/app/pages/profile/profile.page.html
+++ b/src/app/pages/profile/profile.page.html
@@ -21,7 +21,7 @@
         </ion-row>
       </ion-col>
       <ion-col size="3">
-        <ion-button expand="block" fill="outline"> {{'VIEW_QR' | translate}} </ion-button>
+        <ion-button expand="block" fill="outline" [routerLink]="['/qr']"> {{'VIEW_QR' | translate}} </ion-button>
       </ion-col>
     </ion-row>
 
