--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -23,8 +23,8 @@
       </ion-col>
     </ion-row>
     <ion-row>
-      <ion-col size="10.5" class="ion-padding-horizontal">
-        <ion-searchbar class="custom-search" mode="ios"></ion-searchbar>
+      <ion-col size="10.5" class="ion-padding-horizontal" (click)="searchProduct()">
+        <ion-searchbar class="custom-search" mode="ios" disabled></ion-searchbar>
       </ion-col>
       <ion-col size="1.5" class="ion-no-padding ion-align-self-center ion-text-center">
         <ion-icon name="notifications" class="notif-icon"></ion-icon>
