generate product detail component and navigate to product detail from list

--- a/src/app/shared/common/cards/card-product/card-product.component.html
+++ b/src/app/shared/common/cards/card-product/card-product.component.html
@@ -1,4 +1,4 @@
-<ion-card class="ion-no-border">
+<ion-card class="ion-no-border" [routerLink]="['/product/detail/1']">
   <ion-card-header class="ion-no-padding">
     <img src="https://via.placeholder.com/200.png" class="full-width" />
   </ion-card-header>
